--- a/src/main/resources/templates/CoreJava.html
+++ b/src/main/resources/templates/CoreJava.html
@@ -6,6 +6,77 @@
     <title>Core Java Blog</title>
 </head>
 <body>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <ul class="navbar-nav">
+        <li class="nav-item active">
+            <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/About">About Us</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/GitHub">GitHub</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="Algorithms">Algorithms</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/CoreJava">Core Java</a>
+        </li>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/ObjectOrientedJava">Object-oriented Java</a>
+        </li></li>
+        <li class="nav-item">
+            <a class="nav-link" href="/Bootstrap">Bootstrap&HTML</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/Profile">Blog Author</a>
+        </li>
+
+    </ul>
+</nav>
+<div class="container">
+    <div class="col">
+
+        <div class="row-md-3 text-center">
+            <h4><b>Core Java</b></h4>
+            <h6>September 16 2019</h6>
+
+
+            <img src="https://res.cloudinary.com/dwnqgtvop/image/upload/v1569600971/Declaration-and-assignment-statements_q3ampf.png"
+                 alt="CoreJava"
+                 style="width:35%">
+            <p>In Core Java we deal with variables which are used to store values.
+                These values can change as a program executes</p>
+
+        </div>
+        <div class="row-md-3 ">
+            <div class="col text-center">
+
+
+                <div class="col"></div>
+            </div>
+
+        </div>
+        <div class="row-md-6 ">
+            <div class="col text-center">
+                <h6><b>About Strings</b></h6>
+                <p>A string in literal terms is a series of characters.
+                    The basic Java String is basically an array of characters.
+                    One of your main tools for storing and processing text is going to be the String class.</p>
+
+                <img src="https://res.cloudinary.com/dwnqgtvop/image/upload/v1569602191/Reverse-String-in-Java-using-recursion_pzwxc0.png"
+                     alt="CoreJava"
+                     style="width:35%">
+                <p> </p>
+
+                <div class="col"></div>
+
+            </div>
+        </div>
+    </div>
+</div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
