--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>GitHub Blog</title>
+    <title>Blog page</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -36,42 +36,18 @@
 
     </ul>
 </nav>
+ul class="Home">
+<li class="nav-item">
+    <a class="nav-link active" href="#!">About</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href="#!">Link</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link disabled" href="#!">Disabled</a>
+</li>
+</ul>
 
-
-<div class="container" >
-
-
-    <div class="row" text-center>
-
-        <div class="col-md-4">
-            <h4><b>GitHub </b></h4>
-            <h6>September 03 2019</h6>
-            <h6><b> What Is GitHub? </b></h6>
-            <p> GitHub is a code hosting platform for version control and collaboration.
-                It lets you and others work together on projects from anywhere.
-                It is a subsidiary of Microsoft, which acquired the company in 2018.</p>
-            <p>GitHub provides a web-based graphical interface and desktop as well as mobile integration.
-                </p>
-
-            <img src="https://res.cloudinary.com/dwnqgtvop/image/upload/v1569593826/dAYXB_jgnjzn.png"
-            alt="GitHub" style="width:50%">
-    </div>
-    <div class="col-md-3">
-    </div>
-
-        <div class="col-md-4" >
-            <h4>Fork a repository on GitHub</h4>
-            <p>After using GitHub by yourself for a while, you may find yourself wanting to contribute to someone else’s project. Or maybe you’d like to use someone’s project as the starting point for your own.
-                This process is known as forking.</p>
-
-                <P>Creating a “fork” is producing a personal copy of someone else’s project.
-                Forking is at the core of social coding at GitHub.</p>
-            <img src="https://res.cloudinary.com/dwnqgtvop/image/upload/v1569595253/anp100-numuv-grip-aid-fork-demo-300_o81udl.jpg"
-                 alt="GitHub" style="width:50%">
-        </div>
-        </div>
-    </div>
-</div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
