--- a/src/main/resources/templates/ObjectOrientedJava.html
+++ b/src/main/resources/templates/ObjectOrientedJava.html
@@ -6,6 +6,71 @@
     <title>Object Oriented Java Blog</title>
 </head>
 <body>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <ul class="navbar-nav">
+        <li class="nav-item active">
+            <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/About">About Us</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/GitHub">GitHub</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="Algorithms">Algorithms</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/CoreJava">Core Java</a>
+        </li>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/ObjectOrientedJava">Object-oriented Java</a>
+        </li></li>
+        <li class="nav-item">
+            <a class="nav-link" href="/Bootstrap">Bootstrap&HTML</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/Profile">Blog Author</a>
+        </li>
+
+    </ul>
+</nav>
+
+<div class="column ">
+        <h4><b>Object-oriented Java </b></h4>
+        <h6>September 21 2019</h6>
+        <h6><b>Classes and Objects</b></h6>
+        <p>Classes are code units or blocks developed by a programmer
+            and can be put together to make a larger program.</p>
+        <p>Objects are created from classes and contain data and any processing methods
+        that fulfill the functions of that class.</p>
+    <img src="https://res.cloudinary.com/dwnqgtvop/image/upload/v1569604565/javaclass_vxqjd0.png"
+         alt="ObjectOrientedJava" style="width:50%">
+</div>
+<p class="column text-center">
+    <h6><b>Polymorphism</b></h6>
+   <p>Polymorphism is the ability of an object to take on many forms. The most common use of polymorphism in OOP occurs when a parent class reference is used to refer to a child class object.
+
+       Any Java object that can pass more than one IS-A test is considered to be polymorphic. In Java, all Java objects are polymorphic since any object will pass the IS-A test for their own type and for the class Object.</p>
+
+    <p>It is important to know that the only possible way to access an object is through a reference variable. A reference variable can be of only one type. Once declared, the type of a reference variable cannot be changed.
+
+        The reference variable can be reassigned to other objects provided that it is not declared final. The type of the reference variable would determine the methods that it can invoke on the object.</p>
+
+
+<img src="https://res.cloudinary.com/dwnqgtvop/image/upload/v1569605704/types_of_constructor_jza07f.jpg"
+     alt="ObjectOrientedJava" style="width:50%">
+
+
+</div>
+<div class="row">
+
+    <div class="column">
+    </div>
+
+</div>
+</div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
