--- a/src/main/resources/templates/About.html
+++ b/src/main/resources/templates/About.html
@@ -6,6 +6,36 @@
     <title>Java Bootcamp</title>
 </head>
 <body>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <ul class="navbar-nav">
+        <li class="nav-item active">
+            <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/About">About Us</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/GitHub">GitHub</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="Algorithms">Algorithms</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/CoreJava">Core Java</a>
+        </li>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/ObjectOrientedJava">Object-oriented Java</a>
+        </li></li>
+        <li class="nav-item">
+            <a class="nav-link" href="/Bootstrap">Bootstrap&HTML</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/Profile">Blog Author</a>
+        </li>
+
+    </ul>
+</nav>
 <div class="container">
 
     <div class="row">
