--- a/src/main/resources/templates/Bootstrap.html
+++ b/src/main/resources/templates/Bootstrap.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>GitHub Blog</title>
+    <title>HTML/CSS/Bootstrap Blog</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -36,39 +36,43 @@
 
     </ul>
 </nav>
+<div class="container">
+    <div class="col">
+
+        <div class="row-md-3 text-center">
+            <h4><b>HTML/CSS/Bootstrap</b></h4>
+            <h6>September 25 2019</h6>
 
 
-<div class="container" >
+            <img src="https://res.cloudinary.com/dwnqgtvop/image/upload/v1569606596/hqdefault_xrdtpj.jpg"
+                 alt="Bootstrap"
+                 style="width:35%">
+            <h6>How Bootstrap Grid Works</h6>
+            <p>Inside your page you must have one container which contains rows.
+                Each row contains columns.</p>
 
-
-    <div class="row" text-center>
-
-        <div class="col-md-4">
-            <h4><b>GitHub </b></h4>
-            <h6>September 03 2019</h6>
-            <h6><b> What Is GitHub? </b></h6>
-            <p> GitHub is a code hosting platform for version control and collaboration.
-                It lets you and others work together on projects from anywhere.
-                It is a subsidiary of Microsoft, which acquired the company in 2018.</p>
-            <p>GitHub provides a web-based graphical interface and desktop as well as mobile integration.
-                </p>
-
-            <img src="https://res.cloudinary.com/dwnqgtvop/image/upload/v1569593826/dAYXB_jgnjzn.png"
-            alt="GitHub" style="width:50%">
-    </div>
-    <div class="col-md-3">
-    </div>
-
-        <div class="col-md-4" >
-            <h4>Fork a repository on GitHub</h4>
-            <p>After using GitHub by yourself for a while, you may find yourself wanting to contribute to someone else’s project. Or maybe you’d like to use someone’s project as the starting point for your own.
-                This process is known as forking.</p>
-
-                <P>Creating a “fork” is producing a personal copy of someone else’s project.
-                Forking is at the core of social coding at GitHub.</p>
-            <img src="https://res.cloudinary.com/dwnqgtvop/image/upload/v1569595253/anp100-numuv-grip-aid-fork-demo-300_o81udl.jpg"
-                 alt="GitHub" style="width:50%">
         </div>
+        <div class="row-md-3 ">
+            <div class="col text-center">
+
+
+                <div class="col"></div>
+            </div>
+
+        </div>
+        <div class="row-md-6 ">
+            <div class="col text-center">
+                <h6><b>HTML Elements, </b></h6>
+                <p>The opening tag,brackets closing tag, contents and elements.</p>
+
+                <img src="https://res.cloudinary.com/dwnqgtvop/image/upload/v1569607238/HTML_logo_gftbtm.png"
+                     alt="Bootstrap"
+                     style="width:35%">
+                <p> </p>
+
+                <div class="col"></div>
+
+            </div>
         </div>
     </div>
 </div>
