--- a/src/main/resources/templates/Algorithms.html
+++ b/src/main/resources/templates/Algorithms.html
@@ -41,7 +41,7 @@
             <h4>Program Design & Algorithms</h4>
             <h6>September 10 2019</h6>
 
-            <h6>Steps in program development</h6>
+            <h6><b>Steps in program development</b></h6>
             <ul>
                 <li>Define the problem.</li>
                 <li>Outline the solution.</li>
@@ -57,7 +57,7 @@
 
         </div>
         <div class="column">
-            <h4>Algorithm:</h4>
+            <h6>Algorithm:</h6>
         </div>
         <div class="row">
 
