--- a/src/main/resources/templates/GitHub.html
+++ b/src/main/resources/templates/GitHub.html
@@ -60,7 +60,7 @@
     </div>
 
         <div class="col-md-4" >
-            <h4>Fork a repository on GitHub</h4>
+            <h6><b>Fork a repository on GitHub</b></h6>
             <p>After using GitHub by yourself for a while, you may find yourself wanting to contribute to someone else’s project. Or maybe you’d like to use someone’s project as the starting point for your own.
                 This process is known as forking.</p>
 
